# simple-quic

./: CMakeLists.txt  README.md
src/: cc_client.cc  cc_server.cc  client.cc  config.hh  multi_client.cc  multi_server.cc  server.cc
src/context/: callback.hh  common.hh  connection.hh  connection_id.cc  connection_id.hh  quic.cc  quic.hh  self_quic.cc
src/payload/: common.hh  frame.hh  packet.hh
src/utils/: bytestream.hh  chunkstream.hh  interval.hh  log.cc  log.hh  random.cc  random.hh  socket.cc  socket.hh  time.hh  variable_codec.cc  variable_codec.hh
test_shell/: TPO&IdleTimeout
